--- a/src/zx/design/data.fxml
+++ b/src/zx/design/data.fxml
@@ -4,11 +4,10 @@
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="205.0" prefWidth="353.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="zx.controller.ServerController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefWidth="353.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="zx.controller.ServerController">
    <children>
-      <GridPane fx:id="dataPane" prefHeight="155.0" prefWidth="353.0">
+      <GridPane fx:id="dataPane" vgap="10.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="295.0" minWidth="10.0" prefWidth="68.0" />
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="483.0" minWidth="10.0" prefWidth="285.0" />
@@ -21,15 +20,15 @@
         </rowConstraints>
          <children>
             <Label text="类型" GridPane.halignment="CENTER" />
-            <Label text="FIELD" GridPane.halignment="CENTER" GridPane.rowIndex="2" />
+            <Label minHeight="0.0" text="FIELD" GridPane.halignment="CENTER" GridPane.rowIndex="2" />
             <Label text="KEY" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
-            <Label text="VALUE" GridPane.halignment="CENTER" GridPane.rowIndex="3" />
+            <Label minHeight="0.0" text="VALUE" GridPane.halignment="CENTER" GridPane.rowIndex="3" />
             <TextField fx:id="keyField" GridPane.columnIndex="1" GridPane.rowIndex="1">
                <GridPane.margin>
                   <Insets right="50.0" />
                </GridPane.margin>
             </TextField>
-            <TextField fx:id="fieldField" GridPane.columnIndex="1" GridPane.rowIndex="2">
+            <TextField fx:id="fieldField" minHeight="0.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
                <GridPane.margin>
                   <Insets right="50.0" />
                </GridPane.margin>
@@ -39,16 +38,19 @@
                   <Insets right="50.0" />
                </GridPane.margin>
             </ChoiceBox>
-            <TextField fx:id="valueField" GridPane.columnIndex="1" GridPane.rowIndex="3">
+            <TextField fx:id="valueField" minHeight="0.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
                <GridPane.margin>
                   <Insets right="50.0" />
                </GridPane.margin>
             </TextField>
          </children>
+         <VBox.margin>
+            <Insets top="10.0" />
+         </VBox.margin>
       </GridPane>
       <AnchorPane prefHeight="45.0" prefWidth="600.0">
          <children>
-            <Button fx:id="saveData" layoutX="102.0" layoutY="8.0" mnemonicParsing="false" onMouseReleased="#saveDataReleased" text="保存" />
+            <Button fx:id="saveData" layoutX="102.0" layoutY="8.0" mnemonicParsing="false" onMouseReleased="#saveDataReleased" text="确定" />
             <Button fx:id="canelBtn" layoutX="213.0" layoutY="8.0" mnemonicParsing="false" onMouseReleased="#canelBtnReleased" text="取消" />
          </children>
       </AnchorPane>
