--- a/src/zx/design/main.fxml
+++ b/src/zx/design/main.fxml
@@ -94,7 +94,8 @@
                           <columns>
                               <TableColumn fx:id="findtab" maxWidth="1.7976931348623157E308" minWidth="70.0" prefWidth="150.0" resizable="false" text="TYPE" />
                             <TableColumn maxWidth="1.7976931348623157E308" minWidth="200.0" prefWidth="350.0" resizable="false" text="KEY" />
-                            <TableColumn maxWidth="-1.0" minWidth="500.0" prefWidth="-1.0" text="FIELD/VALUE" />
+                              <TableColumn maxWidth="1.7976931348623157E308" minWidth="200.0" prefWidth="350.0" resizable="false" text="FIELD" />
+                            <TableColumn maxWidth="-1.0" minWidth="500.0" prefWidth="-1.0" text="VALUE" />
                           </columns>
                            <columnResizePolicy>
                               <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
