--- a/src/zx/design/main.fxml
+++ b/src/zx/design/main.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="zx.controller.MainController">
+<VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" stylesheets="@main.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="zx.controller.MainController">
    <children>
       <HBox fx:id="content" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" VBox.vgrow="ALWAYS">
          <children>
@@ -76,26 +76,47 @@
             </VBox>
          </children>
          <VBox.margin>
-            <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+            <Insets left="20.0" right="20.0" top="20.0" />
          </VBox.margin>
       </HBox>
-      <TabPane fx:id="bottomTabPane" maxWidth="1.7976931348623157E308" minHeight="40.0" prefHeight="0.0" side="BOTTOM" tabClosingPolicy="UNAVAILABLE" visible="false">
+      <TabPane fx:id="bottomTabPane" maxWidth="1.7976931348623157E308" minHeight="30.0" prefHeight="0.0" side="BOTTOM" tabClosingPolicy="UNAVAILABLE">
         <tabs>
-            <Tab closable="false" disable="true" style="-fx-size: 30;">
+            <Tab closable="false" disable="true" style="-fx-size: 50;">
                <content>
                   <AnchorPane disable="true" minHeight="0.0" minWidth="0.0" prefHeight="120.0" />
                </content>
             </Tab>
           <Tab fx:id="findTab" closable="false" text="查找">
             <content>
-              <AnchorPane maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" />
+              <AnchorPane maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0">
+                     <children>
+                        <VBox id="wapperTool" prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                           <children>
+                              <TableView fx:id="dataTable" maxWidth="1.7976931348623157E308" VBox.vgrow="ALWAYS">
+                                <columns>
+                                    <TableColumn fx:id="findtab" maxWidth="1.7976931348623157E308" minWidth="70.0" prefWidth="150.0" resizable="false" text="TYPE" />
+                                  <TableColumn maxWidth="1.7976931348623157E308" minWidth="200.0" prefWidth="350.0" resizable="false" text="KEY" />
+                                    <TableColumn maxWidth="1.7976931348623157E308" minWidth="200.0" prefWidth="350.0" resizable="false" text="FIELD" />
+                                  <TableColumn maxWidth="-1.0" minWidth="500.0" prefWidth="-1.0" text="VALUE" />
+                                </columns>
+                                 <columnResizePolicy>
+                                    <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                                 </columnResizePolicy>
+                              </TableView>
+                           </children>
+                        </VBox>
+                     </children></AnchorPane>
             </content>
           </Tab>
           <Tab fx:id="consoleTab" closable="false" text="控制台">
             <content>
               <AnchorPane maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0">
                      <children>
-                        <TextArea fx:id="consoleTextArea" editable="false" maxWidth="1.7976931348623157E308" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                        <VBox id="wapperTool" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                           <children>
+                              <TextArea fx:id="consoleTextArea" editable="false" maxWidth="1.7976931348623157E308" wrapText="true" VBox.vgrow="ALWAYS" />
+                           </children>
+                        </VBox>
                      </children></AnchorPane>
             </content>
           </Tab>
